<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/vnosUre"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="@string/namig_ure"
            android:inputType="number"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dvopicje"
            android:textColor="@color/besedilo_primarno"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/vnosMinute"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="@string/namig_minute"
            android:inputType="number"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dvopicje"
            android:textColor="@color/besedilo_primarno"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/vnosSekunde"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="@string/namig_sekunde"
            android:inputType="number"
            android:gravity="center" />
    </LinearLayout>

    <EditText
        android:id="@+id/vnosOpis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/namig_opis_casovnika"
        android:layout_marginTop="16dp" />

</LinearLayout>